--- a/Dockerfile.1
+++ b/Dockerfile.1
@@ -6,6 +6,7 @@ FROM ubuntu:bionic
 
 RUN apt-get update &&                           \
     apt-get install -y --no-install-recommends  \
+      ca-certificates                           \
       git                                       \
       python3                                   \
       gcc-8 g++-8                               \
